# Clion-Qt6-Tesseract-Ocr

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui
ocr/: ocr.cpp  ocr.h
